Changelog:

3.8.5 20170414
Impl: Added POI Excel util

3.8.4 20170324
Core: Added ReportingThreadPoolProvider test and changed initialization modifiers

3.8.3 20170323
Generators: XJC plugin to add element defaults with argument name eip-xsd-default-value
Sample: Use new XJC plugin with argument eip-xsd-default-value

3.8.2 20170120
Generators: Marshaller and Unmarshaller based on packages
Impl: Marshaller and Unmarshaller based on packages

3.8.1 20170111
Impl: Fixed sync LockableOperation releasing lock to early
DomainDoc: Report generation with overview page

3.8.0 20161202
DomainDoc: Report generation at maven build

3.7.0 20161129
DomainDoc: Added report generation
Core: Finished SFTP gateway

3.6.0 20161118
Core: Added SFTP gateway
Persistence: Bulk delete per JPA
Flow: TabularMapper default return handling
Flow: Several minor bug fixes

3.5.5 20161024
DomainDoc: Added GetRevision operation

3.5.4 20161024
DomainDoc: Fixed parsing
XsdsUtil: Fixed parsing

3.5.3 20161006
DomainDoc: Added service to sample
Sample: Fixed template deployment

3.5.2 20161004
DomainDoc: Added interfaceType fieldMappingInputTypes
Flow: Fixed interfaceName bug
Flow: Added default mapping types in sample
Sample: Updated XSD documentation
Sample: Java - W3C DataTypeMapping

3.5.1 20160921
XsdUtil: Fixed chaching bug
Plugins: Condense service schema
DDLGenerator: Defaults sql now to target directory
DomainDoc: Added service
DomainDoc: Added xsds assembly
DomainDoc: Prepared operation implementation
DomainDoc: Fixed parsing
DomainDoc: Fixed persistence

3.5.0 20160914
DomainDoc: Model update
Flow: ComplexMapper prepared implementation made more usable
Flow: Documentation enhanced
Flow: Error message fixed
Flow: MappingOperation logging added
Flow: Rule definition added
Flow: TabularMapper generator fixed with boolean values
Generators: Using the right EIP version to display
Impl: Created EipHttpsClientHttpRequestFactory to provide HTTPs for a RestTemplate