@@ -1,5 +1,7 @@
 Changelog:
 
+Generators: Added mvc dispatch servlet to web.xml
+
 3.8.5 20170414
 Impl: Added POI Excel util
 
